# TripletCLIP

./: .gitignore  AGENTS.md  pyproject.toml  sugarcrepe-pedes.py  text-to-image-retrieval.py
configs/: sugarcrepe_cuhk_pedes.yaml  sugarcrepe_icfg_pedes.yaml  sugarcrepe_rstpreid.yaml  text_to_image_retrieval_cuhk_pedes.yaml  text_to_image_retrieval_icfg_pedes.yaml  text_to_image_retrieval_rstpreid.yaml
env/: .env.example
shell/: eval_cuhk_pedes.sh  eval_icfg_pedes.sh  eval_rstpreid.sh
