[project]
name = "tripletclip-lab-eval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "open-clip-torch>=2.26.0",
    "peft>=0.12.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "safetensors>=0.4.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0,<5.0.0",
]

[tool.uv]
package = false
